<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/miColormain3"
    tools:context=".MainActivity3">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/curso" />

        <LinearLayout
            android:layout_width="369dp"
            android:layout_height="95dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/letrero_id"
                android:textColorLink="@color/miColorPreferido" />

            <EditText
                android:id="@+id/tvid2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="371dp"
            android:layout_height="88dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/letrero_nombre"
                android:textColorLink="@color/miColorPreferido" />

            <EditText
                android:id="@+id/tvnombre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="376dp"
            android:layout_height="213dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textdescrpcion"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/letrero_descripcion"
                android:textColorLink="@color/miColorPreferido" />

            <EditText
                android:id="@+id/tvdescripcion2"
                android:layout_width="242dp"
                android:layout_height="169dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>